--- a/frontmatter/frontpage.tex
+++ b/frontmatter/frontpage.tex
@@ -39,7 +39,7 @@
 ~
 \begin{minipage}{0.5\textwidth}
 \begin{flushright} \large
-\emph{Supervisors:} \\
+\emph{Supervisor:} \\
 \emph{Professor} \textsc{Knut-Andreas Lie} \\% Supervisor's Name
 \end{flushright}
 \end{minipage}\\[4cm]
