--- a/04_result_and_discussion.tex
+++ b/04_result_and_discussion.tex
@@ -14,7 +14,7 @@ Next, we define the properties of the rock. In an oil reservoir, the oil lies in
     pv(p) = \text{pv}_r \exp[c_r\cdot(p-p_r)],
     \label{eq:poreVolume}
 \end{equation}
-where pv$_r$ is the rock pore volume properties in a cell at a reference pressure $p_r$. $c_r$ is a constant controlling how the rock is compressed. The pore volume of the rock as a function of pressure values are visualized in \autoref{fig:flowSolverPoreVolume}. The graph shows that for a cell with volume $1000\text{m}^3$ there is approximately room for $600\text{m}^3$ oil.
+where pv$_r$ is the rock pore volume properties, in a cell, at a reference pressure $p_r$. $c_r$ is a constant controlling how the rock is compressed. The pore volume of the rock as a function of pressure values are visualized in \autoref{fig:flowSolverPoreVolume}. The graph shows that for a cell with volume $1000\text{m}^3$ there is approximately room for $600\text{m}^3$ oil.
 
 Since we assume that the oil have a constant compressibility, the density of the oil is given as an analytic function of pressure 
 \begin{equation}
@@ -31,7 +31,7 @@ where $\rho_r = 850\text{kg}/\text{m}^3$ and $c$ is a constant controlling how f
     \end{subfigure}
     \begin{subfigure}[t]{0.48\textwidth}
         \includegraphics[width=\textwidth]{figures/flow_solver_density.eps}
-        \caption{The density of the oil in the reservoir plotted as a function of pressure}
+        \caption{The density of the oil in the reservoir plotted as a function of pressure.}
         \label{fig:flowSolverPoreVolume}
     \end{subfigure}
     \caption{}
@@ -41,7 +41,7 @@ The initial pressure in the reservoir is calculated by solving the nonlinear ODE
 \begin{equation*}
     \frac{dp}{dz} = g\cdot \rho(p), \quad p(z = 0) = p_r = 200\text{bar} 
 \end{equation*}  
-for the fluid density given by $\rho(p) = \rho_r\cdot\exp\big(c\cdot(p-p_r\big)$, for the same constants $\rho_r$ and $c$ as in \autoref{eq:pressureSolverDensity}. The well is then inserted by removing 8 grid elements using the \texttt{W = addWell(...)} function. The grid with initial pressure and well can be seen in \autoref{fig:flowSolverGridWithWell}.
+for the fluid density given by Equation \eqref{eq:pressureSolverDensity} and $g$ as the gravity. The well is then inserted by removing 8 grid elements using the \texttt{W = addWell(...)} function. The grid with initial pressure and well can be seen in \autoref{fig:flowSolverGridWithWell}.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -78,7 +78,7 @@ This holds for the discrete case as well \emph{\citep{lieMrstUrl}}, and hence th
 Now we have all the ingredients to set up the governing equations for the flow in the reservoir. We use a finite volume method to discretize in space, as explained in \autoref{sec:ApplicationsAD}, and a backward Euler method to discretize in time. In the end, all the equations we want to solve should be on residual form, $\boldsymbol{F}(\boldsymbol{x}) = 0$, so that we can use the Newton-Raphson method described in Equation \eqref{eq:newtonRaphsonVector} to solve the system. As there are multiple equations that will be a part of the residual function $\boldsymbol{F}(\boldsymbol{x})$, we define them separately first. One of the advantages of defining the discrete gradient- and divergence operator is that the continuous and discrete forms of the equations look very similar. Hence I will first state the continuous version of the equation and then the discrete, so that it is easy to see how similar they look. I start by defining Darcy's law, which explains how the oil will flow through the porous rock
 
 \begin{equation*}
-    \vec{v} = - \frac{k}{\mu}(\nabla p - \vec{g}\rho).
+    \textbf{v} = - \frac{k}{\mu}(\nabla p - \textbf{g}\rho).
     \label{eq:pressSolverDarcy}
 \end{equation*}
 $k$ is the permeability that we have saved in the \texttt{rock} variable and $\mu$ is the viscosity of the oil.
@@ -86,13 +86,13 @@ The corresponding discrete equation that we call \texttt{flux} is given by
 \lstinputlisting{code/flux.jl}
 Here, T is the transmissibilities that contain $k$ and the properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. This determines how much the flux depend on $g$ given the orientation of the adjacent cells. When \texttt{flux} is defined, we define the continuity equation in the continuous case
 \begin{equation*}
-    \frac{\partial}{\partial t}(\phi\rho)(p) + \nabla\cdot(\rho\vec{v}) = q,
+    \frac{\partial}{\partial t}(\phi\rho)(p) + \nabla\cdot(\rho\textbf{v}) = q,
 \end{equation*}
-where $\phi$ is the porosity of the rock. Since we will handle the well later, the source term $q$ representing injection or production fluids is set to zero for now. In the corresponding discrete case we get the function
+where $\phi$ is the porosity of the rock. Since we will handle the well later, the source term $q$ representing injection or production fluids, is set to zero for now. In the corresponding discrete case we get the function
 \lstinputlisting{code/presEq.jl}
 where \texttt{pv} is the pore volume of the rock given in Equation \eqref{eq:poreVolume} and $p0$ is the pressure at the previous time step. 
 
-In addition, we need a few equations to represent the flow inside the wellbore. This flow will be the production term $q$ we ignored in the derivation of the \texttt{presEq} function. The standard model is to assume that the pressure is in hydrostatic equilibrium inside the wellbore, so that the pressure in a perforated cell (i.e., a cell in which the wellbore is open to the reservoir rock and the oil can flow into the well) is given as a hydrostatic difference from the pressure at a datum point (the bottom-hole pressure), typically given at the top of the reservoir. That is, the pressure in a perforated cell $c$ is given by
+In addition, we need a few equations to represent the flow inside the wellbore. This flow will be the production term $q$ we ignored in the derivation of the \texttt{presEq} function. The standard model is to assume that the pressure is in hydrostatic equilibrium inside the wellbore, so that the pressure in a perforated cell (i.e., a cell in which the wellbore is open to the reservoir rock and the fluid can flow in or out of the well) is given as a hydrostatic difference from the pressure at a datum point (the bottom-hole pressure), typically given at the top of the reservoir. That is, the pressure in a perforated cell $c$ is given by
 \begin{equation*}
 p_c = p_{bh} + g (z_c - z_{bhp})\rho.    
 \end{equation*}
@@ -108,7 +108,7 @@ The residual expression for the total production \texttt{qS} is then given by su
 \lstinputlisting{code/rateEq.jl}
 Here \texttt{rhoS} is the density of the oil at the surface, to obtain the total volume produced. To control the well, we can either set total inflow or outflow of the well (evaluated at surface pressure) to be constant, or set the datum (bottom-hole) pressure as constant. In either case, we will wish to compute the other (i.e., if pressure is given, we determine the surface rate, and vice versa). Herein, we assume pressure to be given as 100 bar and we get
 \lstinputlisting{code/ctrlEq.jl}
-When all the governing equations are defined, we merge them into one large residual vector function $\boldsymbol{F}(\boldsymbol{x})$. The first 1000 residual functions are the \texttt{presEq} with negative production \texttt{q\_conn} for the indices \texttt{wc}. Equation number 1001 is the \texttt{rateEq} and Equation 1002 is the \texttt{ctrlEq}. Hence, $\boldsymbol{x}\in\Re^{1002}$, where the first 1000 elements are the pressure at the different nodes, element 1001 will be the pressure at the datum point inside the well (\texttt{bhp}), and element 1002 is the surface fluid rate \texttt{qS}. Now, if we start by defining \texttt{p}, \texttt{bhp} and \texttt{qS} as AD-variables, $\boldsymbol{F}$ will also be an AD-variable and we will have the Jacobian of the residual vector function $\boldsymbol{F}$. This means we can solve the equations using the Newton-Raphson method, defined in Equation \eqref{eq:newtonRaphsonVector}. A pseudo code of how we solve the system can be seen below.
+When all the governing equations are defined, we merge them into one large residual vector function $\boldsymbol{F}(\boldsymbol{x})$. The first 1000 residual equations are the \texttt{presEq} with negative production \texttt{q\_conn} for the indices \texttt{wc}. Equation number 1001 is the \texttt{rateEq} and Equation 1002 is the \texttt{ctrlEq}. Hence, $\boldsymbol{x}\in\Re^{1002}$, where the first 1000 elements are the average pressure in each cell, element 1001 will be the pressure at the datum point inside the well (\texttt{bhp}), and element 1002 is the surface fluid rate \texttt{qS}. Now, if we start by defining \texttt{p}, \texttt{bhp} and \texttt{qS} as AD-variables, $\boldsymbol{F}$ will also be an AD-variable and we will have the Jacobian of the residual vector function $\boldsymbol{F}$. This means we can solve the equations using the Newton-Raphson method, defined in Equation \eqref{eq:newtonRaphsonVector}. A pseudo code of how we solve the system can be seen below.
 \newpage
 \lstinputlisting{code/press_solver_main_loop.jl}
 
@@ -130,16 +130,15 @@ Note the different intervals for the color bar in \autoref{fig:flowSolverResult}
     \label{fig:flowSolverProduction}
 \end{figure}
 
-When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of the Jacobian. The first impression is that the matrix is very sparse. Except from a few nonzero points in row 1001 and column 1001 because of the well, the Jacobian consist of 7 diagonals with nonzero elements and the rest of the elements being 0. As there are only 6419 non-zero out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
+When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of the Jacobian. The first impression is that the matrix is very sparse. Except from a few nonzero points in row 1001 and column 1001 because of the well, the Jacobian consist of 7 diagonals with nonzero elements and the rest of the elements being 0. As there are only 6419 non-zero elements out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
 
+As explained in \autoref{sec:ApplicationsAD}, the different types of AD mentioned store the Jacobians differently. In  \textit{ForwardAutoDiff} and MRST's implementations of AD, the Jacobians are stored as a list of sparse matrices where each Jacobian element in the list is the Jacobian with respect to one primary variable. In this example, this is a lot more efficient than storing the full $1002\times 1002$ Jacobian as  \textit{ForwardDiff} does.
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.9\textwidth]{figures/flowSolver_Jacobian.eps}
     \caption{Structure of the $1002\times 1002$ Jacobian of the governing equations. There are 6419 non-zero elements.}
     \label{fig:flowSolverJacobian}
 \end{figure}
-
-As explained in \autoref{sec:ApplicationsAD}, the different types of AD mentioned store the Jacobians differently. In ForwardAutoDiff and MRST's implementations of AD, the Jacobians are stored as a list of sparse matrices where each Jacobian element in the list is the Jacobian with respect to one primary variable. In this example, this is a lot more efficient than storing the full $1002\times 1002$ Jacobian as ForwardDiff does.
 
 The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in spatial direction $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in the spatial directions. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
@@ -155,11 +154,11 @@ The difference in implementation of the Jacobian should make a big impact on the
          $30\times30\times30$ & ~ & 188.8s & 147.8s & 1.28\\ \hline
     \end{tabular}
 \end{table}
-For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The ForwardDiff method takes much longer time than ForwardAutoDiff and MRST. Since ForwardDiff already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. According to the results in \autoref{tab:FlowSolverSpeedTest}, MRST is a bit faster than ForwardAutoDiff. We can also see from the column farthest to the right that the ratio between time spent using MRST and ForwardAutoDiff stays approximately constant as the complexity of the problem grows. This indicates that the two different solvers scales equally. It is, although, not possible to say if it is the AD or the linear solver part that makes the solver in MATLAB faster than the one in Julia. To get a better indication of what part of the code makes the difference, I have tested the speed of the linear solvers solving the system \textbf{Ax} = \textbf{b} in MATLAB and Julia. The built in linear solvers use different methods based on the structure of the matrix. Hence, to make the test as relevant as possible, I have used the Jacobian from the first step of the flow solver as the matrix \textbf{A}. The \textbf{b} vector is a randomized vector of values between 0 and 1. The results for the three different discretizations with 10, 20 and 30 cells in each spatial direction can be seen in \autoref{fig:benchmarkLinearSolver}. 
+For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \textit{ForwardDiff} method takes much longer time than  \textit{ForwardAutoDiff} and MRST. Since  \textit{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. According to the results in \autoref{tab:FlowSolverSpeedTest}, MRST is a bit faster than  \textit{ForwardAutoDiff}. We can also see from the column farthest to the right that the ratio between time spent using MRST and  \textit{ForwardAutoDiff} stays approximately constant as the complexity of the problem grows. This indicates that the two different solvers scales equally. It is, although, not possible to say if it is the AD or the linear solver part that makes the solver in MATLAB faster than the one in Julia. To get a better indication of what part of the code makes the difference, I have tested the speed of the linear solvers solving the system \textbf{Ax} = \textbf{b} in MATLAB and Julia. The built in linear solvers use different methods based on the structure of the matrix. Hence, to make the test as relevant as possible, I have used the Jacobian from the first step of the flow solver as the matrix \textbf{A}. The \textbf{b} vector is a randomized vector of values between 0 and 1. The results for the three different discretizations with 10, 20 and 30 cells in each spatial direction can be seen in \autoref{fig:benchmarkLinearSolver}. 
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.9\textwidth]{figures/benchmark_linear_solvers.pdf}
     \caption{Computational time for solving the system \textbf{Ax} = \textbf{b} for \textbf{x}$\in\Re^{n}$ and \textbf{A} = \textbf{J}, the Jacobian from the first step in the flow solver.}
     \label{fig:benchmarkLinearSolver}
 \end{figure}
-We can see that the linear solvers perform very similar for all three cases, with MATLAB having small victories in computation time for 10 and 20 cells and Julia for 30. With this in mind, we can say that the linear solvers in MATLAB and Julia perform so similar that it is a valid assumption to assume that they perform equally well. Hence the speed differences in \autoref{tab:FlowSolverSpeedTest} is most likely because of speed differences in the AD-tools. This means that for the equations in the "Single-phase Compressible AD Solver" example, the \textit{ForwardAutoDiff} implementation is approximately 30\% slower than in MRST.
+We can see that the linear solvers perform very similar for all three cases, with MATLAB having small victories in computation time for 10 and 20 cells and Julia for 30. With this in mind, we can say that the linear solvers in MATLAB and Julia perform so similar that it is a valid assumption to assume that they perform equally well. Hence the speed differences in \autoref{tab:FlowSolverSpeedTest} is most likely because of speed differences in the AD-tools. This means that for the equations in the "Single-phase Compressible AD Solver" example, the \textit{ForwardAutoDiff} implementation is approximately 30\% slower than the AD tool in MRST.
