ready for delivery!!

--- a/02_theory.tex
+++ b/02_theory.tex
@@ -345,7 +345,7 @@ Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells}, we no
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_cells_facets.pdf}
-    \caption{Figure of a general Polygonal grid with the mapping cell to facets and facet to cells.}
+    \caption{Figure of a general polygonal grid with the mapping cell to facets and facet to cells.}
     \label{fig:partialGrid}
 \end{figure}
 
