--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -5,4 +5,4 @@ This project report gives an introduction to what Automatic Differentiation (AD)
 
 An AD library (\textit{ForwardAutoDiff}) has been implemented in the programming language Julia and is compared to other, preexisting AD libraries in Julia and MATLAB. For evaluating the function value and Jacobian of a simple vector function with three input vectors $x$, $y$ and $z$, \textit{ForwardAutoDiff} performs well. For vectors of length between 50 and 2000 elements it performs better than all other AD libraries tested. Tests also indicate that the overhead accompanying for-loops is very little in Julia, and this could open up possibilities for more efficient implementations than what have been done in this project.
 
-\textit{ForwardAutoDiff} has been used to create a flow solver modelling the flow of oil in a reservoir. Benchmarks show that \textit{ForwardAutoDiff} is approximately 30 percent slower than the implementation in MATLAB at solving this problem. This result applies for all discretizations tested, even tough for the smallest discretization, the solution vector is inside the length range where \textit{ForwardAutoDiff} is tested to be the quickest. The results show that, for this example, when the function evaluated is more complex, the implementation in MATLAB handles the calculations better than the \textit{ForwardAutoDiff} currently implemented in Julia. 
+\textit{ForwardAutoDiff} has been used to create a flow solver modelling the flow of oil in a reservoir. Benchmarks show that \textit{ForwardAutoDiff} is approximately 30 percent slower than the implementation in MATLAB at solving this problem. This result applies for all discretizations tested, even though for the smallest discretization, the solution vector is inside the length range where \textit{ForwardAutoDiff} is tested to be the quickest. The results show that, for this example, when the function evaluated is more complex, the implementation in MATLAB handles the calculations better than the \textit{ForwardAutoDiff} currently implemented in Julia. 
