--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -57,11 +57,12 @@ year = {n.d.},
   year={2018}
 }
 
-@misc{ForwardDiff,
-  key = {ForwardDiff Package},
-  url = {http://www.juliadiff.org/ForwardDiff.jl/stable/},
-  year={n.d.},
-  note = {Accessed 21.11.2018}
+@article{ForwardDiff,
+    title = {Forward-Mode Automatic Differentiation in Julia},
+   author = {{Revels}, J. and {Lubin}, M. and {Papamarkou}, T.},
+  journal = {arXiv:1607.07892 [cs.MS]},
+     year = {2016},
+     url = {https://arxiv.org/abs/1607.07892}
 }
 
 @misc{opm,
@@ -181,4 +182,13 @@ eprint = {
   urldate = {2018-12-21},
   year = {n.d.},
   note = {Accessed 21.12.2018}
+}
+
+@misc{Vectorization,
+  title = {The Relationship between Vectorized and Devectorized Code},
+  author = {John Myles White},
+  url = {https://www.johnmyleswhite.com/notebook/2013/12/22/the-relationship-between-vectorized-and-devectorized-code/},
+  urldate = {2019-01-17},
+  year = {2013},
+  note = {Accessed 17.01.2019}
 }
