--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,8 @@
 \setcounter{page}{0}
 \pagenumbering{roman}
 
-\input{frontmatter/preface}
-\input{frontmatter/abstract}
+%\input{frontmatter/preface}
+%\input{frontmatter/abstract}
 
 \cleardoublepage
 \begingroup
@@ -44,11 +44,13 @@
 \setcounter{page}{0}                                 %Resets the page counter to 0
 \pagenumbering{arabic}                               %Sets the page numbering to arabic numbers.
 
-\input{01_introduction.tex}
-\input{02_theory.tex}
+%\input{01_introduction.tex}
+%\input{02_theory.tex}
 \input{03_implementation.tex}
-\input{04_result_and_discussion.tex}
-\input{05_conclusion_and_future_work.tex}
+\input{04_flow_solver_with_AD.tex}
+%\input{05_conclusion_and_future_work.tex}
+
+\input{99_drafts.tex}
 
 %End of Main Section
 %================================================================================================================
